# tito_ws

./: .gitignore  frames_2024-03-18_20.39.02.gv
install/tito_bringup/share/tito_bringup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/tito_bringup/share/tito_bringup/cmake/: tito_bringupConfig-version.cmake  tito_bringupConfig.cmake
install/tito_bringup/share/tito_bringup/config/: controller_velocity.yaml
install/tito_bringup/share/tito_bringup/environment/: ament_prefix_path.dsv  path.dsv
install/tito_bringup/share/tito_bringup/launch/: control.launch.py  ignition_complete.launch.py  ignition_world.launch.py  spawn_gazebo.launch.xml  spawn_ignitiomn.launch.py  spawn_ignition.launch.py  spawn_tito.launch.py  start_world.launch.py  tito_visualize.launch.py
install/tito_bringup/share/tito_bringup/models/: model.config  model.sdf  moon.tif
install/tito_bringup/share/tito_bringup/rviz/: rviz.rviz
install/tito_bringup/share/tito_bringup/urdf/: TITO Moves v1.csv  camera.xacro  tito.urdf  tito_complete.urdf.xacro  (+2 more)
src/tito_bringup/: CMakeLists.txt  package.xml
src/tito_bringup/action/: Move.action
src/tito_bringup/config/: controller_velocity.yaml  controller_velocity_every_leg.yaml
src/tito_bringup/launch/: control.launch.py  ignition_complete.launch.py  ignition_world.launch.py  spawn_gazebo.launch.xml  spawn_ignition.launch.py  tito_visualize.launch.py
src/tito_bringup/meshes/: engine1.STL  engine1.dae  engine2.STL  engine3.STL  engine4.STL  engine5.STL  engine6.STL  leg1.STL  leg1.dae  leg1_new.stl  leg2.STL  leg2.stl  leg3.STL  leg3.stl  leg4.STL  leg4.stl  leg5.STL  leg5.stl  leg6.STL  leg6.stl  tito.STL  tito.dae
src/tito_bringup/models/: model.sdf
src/tito_bringup/rviz/: rviz.rviz
src/tito_bringup/src/: forward.py  publish_command.py  turn.py  turn_clockwise.py  turn_counter_clockwise.py
src/tito_bringup/urdf/: TITO Moves v1.csv  camera.xacro  tito.urdf  tito_complete.urdf.xacro  tito_core.xacro  tito_dif_drive.urdf
src/tito_bringup/worlds/: tito_empty.world
(+122 files in other folders)
